--- a/service1/Taskfile.yml
+++ b/service1/Taskfile.yml
@@ -8,6 +8,7 @@ vars:
 includes:
   test: ./taskset/TestTasks.yml
   run: ./taskset/RunTasks.yml
+  docker: ./taskset/DockerTasks.yml
 
 tasks:
   format:
