--- a/service1/Taskfile.yml
+++ b/service1/Taskfile.yml
@@ -9,6 +9,7 @@ includes:
   test: ./taskset/TestTasks.yml
   run: ./taskset/RunTasks.yml
   docker: ./taskset/DockerTasks.yml
+  machine: ./taskset/MachineTasks.yml
 
 tasks:
   format:
