conf(tasks) Add compose-down task :snowflake:
I've added another task, to decompose the docker group.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,6 +9,13 @@ tasks:
       - echo "Composing the Docker images ..."
       - docker-compose up -d
     silent: true
+
+  compose-down:
+    desc: Decompose the services ...
+    cmds:
+      - echo "Decomposing the Docker images ..."
+      - docker-compose down
+    silent: true
   
   gen-protoi-golang:
     desc: Generate Golang interface for gRPC protocols.
