conf(actions) Add login action 👷‍
I've used another action, the Docker Login, to use stored Secrets to
login at Docker Hub, before pulling and pushing containers.

--- a/.github/workflows/dockerpush.yml
+++ b/.github/workflows/dockerpush.yml
@@ -9,6 +9,9 @@ jobs:
  
     steps:
     - uses: actions/checkout@master
+    - uses: actions/docker/login@master
+      secrets: ["DOCKER_USERNAME", "DOCKER_PASSWORD"]
+
     - name: Build Database Info master image on Docker
       run: docker build ./database --file ./database/Dockerfile --tag ddspog/hashlab-hiring-backapply:database
     - name: Push Database Info master image to Docker Hub
